# skulk

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  skulk.cabal
src/Skulk/: Bumpy.hs  Deep.hs  Outcome.hs  ToString.hs
test/: TestBumpy.hs  TestDeep.hs  TestMain.hs  TestOutcome.hs  TestToString.hs
