
name: skulk
version: 0.1.0.0
synopsis: Eclectic collection of utility functions
-- description:         
homepage: http://github.com/geekyfox/skulk
license: MIT
license-file: LICENSE
author: Ivan Appel
maintainer: ivan.appel@gmail.com
-- copyright:           
-- category:            
build-type: Simple
-- extra-source-files:  
cabal-version: >=1.10

library
    exposed-modules:
        Skulk.Bumpy
        Skulk.Outcome
    -- other-modules:       
    -- other-extensions:    
    build-depends:
        base >=4.6 && <4.9
    hs-source-dirs: src
    default-language:    Haskell2010

test-suite tests
    default-language: Haskell2010
    ghc-options: -Wall
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: TestMain.hs
    build-depends:
        skulk
        ,base>=4.6 && <4.9
        ,hspec

